--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ PORT=5151
 FOLDER=storage
 
 # DB
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
-DB_PORT=
+DB_URL=mongodb://127.0.0.1:27017/meldcx_demo
+
+#AUTH
+JWT_SECRET=U834NHFGJHUQ36
