--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "http-status-codes": "^2.1.4",
-    "mongoose": "^6.1.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.3"
   },
   "scripts": {
     "setup_env": "cp .env.example .env",
