create schema for traffic

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 # SYSTEM
 PORT=5151
 FOLDER=storage
+DOWNLOAD_LIMIT=10
 
 # DB
 DB_URL=mongodb://127.0.0.1:27017/meldcx_demo
 
 #AUTH
 JWT_SECRET=U834NHFGJHUQ36
+EXPIRY_TIME=30d
