--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.2",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.3",
+    "multer": "^1.4.4"
   },
   "scripts": {
     "setup_env": "cp .env.example .env",
