create upload traffic method

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # SYSTEM
 PORT=5151
 FOLDER=storage
-DOWNLOAD_LIMIT=5
+DAILY_DOWNLOAD_LIMIT=5
+DAILY_UPLOAD_LIMIT=2
+INACTIVE_TIME_LIMIT=
 
 # DB
 DB_URL=mongodb://127.0.0.1:27017/meldcx_demo
