create cron job for deleting files

--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@
 PORT=5151
 FOLDER=storage
 DAILY_DOWNLOAD_LIMIT=5
-DAILY_UPLOAD_LIMIT=2
-INACTIVE_TIME_LIMIT=
+DAILY_UPLOAD_LIMIT=3
+INACTIVE_DAYS_LIMIT=3
 
 # DB
-DB_URL=mongodb://127.0.0.1:27017/meldcx_demo
+DB_CONN_URL=mongodb://127.0.0.1:27017/meldcx_demo
 
 #AUTH
 JWT_SECRET=U834NHFGJHUQ36
-EXPIRY_TIME=30d
+JWT_EXPIRY_TIME=30d
