--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@ PORT=
 FOLDER=
 DAILY_DOWNLOAD_LIMIT=
 DAILY_UPLOAD_LIMIT=
-INACTIVE_TIME_LIMIT=
+INACTIVE_DAYS_LIMIT=
 
 # DB
-DB_URL=
+DB_CONN_URL=
 
 # AUTH
 JWT_SECRET=
-EXPIRY_TIME=
+JWT_EXPIRY_TIME=
