--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "node-cron": "^3.0.0"
   },
   "scripts": {
     "setup_env": "cp .env.example .env",
