--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ FOLDER=storage
 DAILY_DOWNLOAD_LIMIT=5
 DAILY_UPLOAD_LIMIT=3
 INACTIVE_DAYS_LIMIT=3
+LAUNCH_MODE=test
 
 # DB
 DB_CONN_URL=mongodb://127.0.0.1:27017/meldcx_demo
