include middleware for upload limit instead of in controller

--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT=5151
 FOLDER=storage
 DAILY_DOWNLOAD_LIMIT=5
 DAILY_UPLOAD_LIMIT=3
-INACTIVE_DAYS_LIMIT=3
-LAUNCH_MODE=test
+INACTIVE_DAYS_LIMIT=7
+LAUNCH_MODE=testNO
 
 # DB
 DB_CONN_URL=mongodb://127.0.0.1:27017/meldcx_demo
